# mnemonic-io-rag

./: .gitignore  Cleaning-and-indexing.ipynb  Qdrant-indexing.ipynb  README.md  Sitemap-analysis.ipynb  requirements.txt
mnemonic-rag/: Dockerfile  README.md  pyproject.toml
mnemonic-rag/app/: server.py
mnemonicscraper/: launcher.py  previous_sitemap.xml  requirements_scrapy.txt  scrapy.cfg  sitemap_events.py
mnemonicscraper/mnemonicscraper/: README.md  crawl.py  items.py  middlewares.py  output.json  pipelines.py  settings.py
mnemonicscraper/mnemonicscraper/spiders/: mnemonicspider.py
